fix timer overflow

--- a/application.css
+++ b/application.css
@@ -155,7 +155,7 @@ h5 {
     position: relative;
     top: -170px;
     left: -70px;
-    width: fit-content;
+    width: 62px;
     letter-spacing: 1.1px;
 }
 
@@ -169,7 +169,7 @@ h5 {
     position: absolute;
     top: 30px;
     left: 41px;
-    width: fit-content;
+    width: 62px;
     letter-spacing: 1.1px;
 }
 
